Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2007-02-14 Tim
 PATCH: [ 1640274 ] Icons for folder compare popup menu
  Src: MainFrm.cpp Merge.dsp Merge.rc resource.h
  Src/res new files: both.bmp left.bmp left_to_browse.bmp left_to_right.bmp
   move_left_to_browse.bmp move_right_to_browse.bmp right.bmp
   right_to_browse.bmp right_to_left.bmp
  Src/Languages/*: Merge*.rc

2007-02-14 Kimmo
 PATCH: [ 1659183 ] Add Vista security attributes to manifest files
  Src/res: WinMerge.exe.manifest WinMergeU.exe.manifest

2007-02-12 Kimmo
 PATCH: [ 1657664 ] Swedish translation update for Backup options
  Submitted by Hans Eriksson
  Src/Languages/Swedish: MergeSwedish.rc

2007-02-11 Kimmo
 Fix compile with VC6 (doesn't have CString::Append() or CString::AppendChar())
  Src: MainFrm.cpp PropBackups.cpp

2007-02-10 Kimmo
 PATCH: [ 1650831 ] Polish translation update for WinMerge 2.6.4
  Submitted by dr_prozac
   Src/Languages/Polish: MergePolish.rc

2007-02-08 Kimmo
 Add accelerator keys to new Backup options dialog
  Src: Merge.rc
  Src/Languages/*: Merge*.rc

2007-02-07 Tim
 PATCH: [ 1582537 ] CSS syntax highlighter
  Src: Merge.dsp
  editlib: ccrystaltextview.cpp ccrystaltextview.h
  editlib new file: css.cpp

2007-02-07 Kimmo
 PATCH: [ 1652696 ] Add more options for backup files
  Src: FileActionScript.cpp MainFrm.cpp MainFrm.h Merge.dsp Merge.rc MergeDoc.cpp
   OptionsDef.h OptionsInit.cpp PropGeneral.cpp PropGeneral.h resource.h
  Src new files: PropBackups.cpp PropBackups.h
  Src/Common: PreferencesDlg.cpp PreferencesDlg.h
  Src/Languages/*: Merge*.rc

2007-02-03 Kimmo
 Remove unused enum definition
  Src: PropCompare.h
 Fix Doxygen comments
  Src: PropCompare.h
 Fix Doxygen comment
  Src: PropCompare.cpp

2007-02-01 Kimmo
 Remove unused parameter from CMainFrame::SyncFileToVCS()
  Src: FileActionScript.cpp MainFrm.cpp MainFrm.h

2007-02-01 WinMerge experimental release 2.7.1.6 (SVN revision 4094)
