@@ -68,9 +68,11 @@ CDiffContext::CDiffContext(LPCTSTR pszLeft /*=NULL*/, LPCTSTR pszRight /*=NULL*/
 , m_piAbortable(NULL)
 , m_bStopAfterFirstDiff(FALSE)
 , m_pFilterList(NULL)
+, m_bCollectReady(FALSE)
 {
 	m_paths.SetLeft(pszLeft);
 	m_paths.SetRight(pszRight);
+	InitializeCriticalSection(&m_criticalSect);
 }
 
 /**
@@ -97,11 +99,18 @@ CDiffContext::CDiffContext(LPCTSTR pszLeft, LPCTSTR pszRight, CDiffContext& src)
 	m_bIgnoreSmallTimeDiff = src.m_bIgnoreSmallTimeDiff;
 	m_bStopAfterFirstDiff = src.m_bStopAfterFirstDiff;
 	m_pFilterList = src.m_pFilterList;
+	m_bCollectReady = src.m_bCollectReady;
+
+	EnterCriticalSection(&src.m_criticalSect);
+	InitializeCriticalSection(&m_criticalSect);
+	LeaveCriticalSection(&src.m_criticalSect);
+	DeleteCriticalSection(&src.m_criticalSect);
 }
 
 CDiffContext::~CDiffContext()
 {
 	delete m_pFilterList;
+	DeleteCriticalSection(&m_criticalSect);
 }
 
 /**
