@@ -31,11 +31,12 @@ class IAbortable;
 class FilterList;
 
 // Interface for reporting current file, as diff traverses file tree
-class IDiffStatus
+/*class IDiffStatus
 {
 public:
 	virtual void rptFile(BYTE code)=0;
 };
+*/
 
 /** Interface to a provider of plugin info */
 class IPluginInfos
@@ -99,6 +100,8 @@ public:
 	BOOL m_bStopAfterFirstDiff; /**< Optimize compare by stopping after first difference? */
 	int m_nQuickCompareLimit; /**< Bigger files are always compared with quick compare */
 	FilterList * m_pFilterList; /**< Filter list for line filters */
+	CRITICAL_SECTION m_criticalSect; /**< Critical section protecting list access. */
+	BOOL m_bCollectReady; /**< Tells collection phase is done. */
 
 private:
 	CList<DIFFITEM,DIFFITEM&> *m_pList; /**< Pointer to list, used to access list */
