@@ -17,7 +17,7 @@ class IAbortable;
 int DirScan_GetItems(const PathContext &paths, const CString & leftsubdir, const CString & rightsubdir, DiffItemList * pLst,
 		bool casesensitive, int depth, CDiffContext * pCtxt);
 
-int DirScan_CompareItems(DiffItemList & list, CDiffContext * pCtxt);
+int DirScan_CompareItems(DiffItemList * list, CDiffContext * pCtxt);
 int DirScan_CompareItems(CDiffContext * pCtxt);
 
 void DirScan_InitializeDefaultCodepage();
